[package]
name = "webgl2_shader_generation"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.21"
syn = {version = "1.0.99", features = ['extra-traits']}
toml = "0.5.9"

serde = "1.0.142"
serde_yaml = "0.9.9"
serde_derive = "1.0.142"

webgl2_shader_definition ={ path = "../webgl2_shader_definition"}